# c89

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  compile.sh  emit-llvm.sh  excludes.txt  test-refresh.sh  test.sh
cmake/: BuildType.cmake  CompileCommands.cmake  (+1 more)
src/: CMakeLists.txt  ast.c  ast.h  block.c  block.h  boolean.h  build.c  build.h  builder.c  builder.h  canonical.c  canonical.h  compare.c  declaration.c  declaration.h  function.c  function.h  generate.c  generate.h  instruction.c  instruction.h  lexer.l  list.c  list.h  main.c  map.c  module.c  module.h  node.c  node.h  parser.c  parser.h  parser.y  pool.c  pretty.c  pretty.h  print.c  print.h  register.c  register.h  (+34 more)
src/array/: CMakeLists.txt  array.c  array.h  slice.c  slice.h  slice_type.c  slice_type.h  type.h  unittest.c  unittest.h
src/ast/: CMakeLists.txt  ast.c  ast.h  ast_tag.c  convert.c  convert.h  declaration.def  definition.def  expression.def  get.h  keyword.def  statement.def  symbol.def  tag.c  tag.def  tag.h  token.def
src/ast/convert/: CMakeLists.txt  convert.c  convert.h  definition.c  statement.c  statement.h
src/builder/: CMakeLists.txt  block.c  block.h  builder.c  builder.h  constant.c  constant.h  convert.c  convert.h  declaration.c  declaration.h  definition.c  definition.h  expression.c  expression.h  function.c  function.h  global.c  global.h  immediate.c  immediate.h  instruction.c  instruction.def  instruction.h  ir.c  ir.h  lexical.c  lexical.h  module.c  opaque.h  statement.c  statement.h  table.c  table.h  terminator.def  type.c  type.h  value.c  value.h
src/builder/instruction/: CMakeLists.txt  instruction.def  kind.h  new.c  new.h  print.c  print.h  struct.c  struct.h
src/builder/statement/: CMakeLists.txt  common.c  common.h  iteration.c  iteration.h  jump.c  jump.h  labeled.c  labeled.h  selection.c  selection.h
src/builder/type/: CMakeLists.txt  print.c  print.h  spec.c  spec.h  struct.h  type.c  type.h
src/cell/: CMakeLists.txt  cell.c  cell.h  factory.c  factory.h  print.c  print.h  tag.c  tag.h  type.h  unittest.c  unittest.h  visit.c  visit.h  visitor.c  visitor.h
src/compare/: CMakeLists.txt  compare.c  compare.h  typedef.h  types.h
src/convert/: CMakeLists.txt  alloc.c  alloc.h  convert.c  convert.h  declaration.c  declaration.h  default.c  default.h  expression.c  expression.h  extra.c  extra.h  function.c  function.h  global.c  global.h  immediate.c  immediate.h  module.c  module.h  return.c  return.h  statement.c  statement.h  switch.c  switch.h  table.c  table.h  type.c  type.h
src/dict/: CMakeLists.txt  dict.c  dict.h  type.h  unittest.c  unittest.h
src/enum/: builtin.def  declaration.def  definition.def  expression.def  expressions.def  handle-end.def  handle.def  keyword.def  misc.def  operator.def  punctuator.def  statement.def  symbol.def  token.def
src/generate/: CMakeLists.txt  block.c  block.h  function.c  function.h  generate.c  generate.h  global.c  global.h  instruction.c  instruction.h  numbering.c  numbering.h
src/ir/: CMakeLists.txt  block.c  block.h  builder.c  constant.c  constant.h  declaration.c  definition.c  expression.c  function.c  function.h  global.c  global.h  instr.c  instr.h  instruction.c  instruction.h  lexical.c  module.c  module.h  opaque.h  pool.c  register.c  return.c  return.h  stack.c  statement.c  switch.c  switch.h  table.c  table.h  type.c  type.h  value.c  value.h  value_pool.c
src/ir/instruction/: instruction.def  new.c  print.c  print.h  struct.c  terminator.def
src/ir/type/: CMakeLists.txt  print.c  print.h  spec.c
src/json/: CMakeLists.txt  any.c  any.h  arr.c  arr.h  array.c  array.h  callback.c  callback.h  closure.c  closure.h  factory.c  factory.h  int.c  int.h  json.c  json.h  map.c  map.h  map_type.c  map_type.h  new.c  new.h  null.c  null.h  obj.c  obj.h  pair.c  pair.h  print.c  print.h  printer.c  printer.h  set.c  set.h  str.c  str.h  tag.c  tag.h  type.c  (+9 more)
src/map/: CMakeLists.txt  map.c  map.h  pair.c  pair.h  typedef.h
src/opaque/: block.h  compare.h  constant.h  function.h  global.h  instruction.h  opaque.h  pool.h  set.h  type.h  value.h
src/pool/: CMakeLists.txt  any.c  any.h  block.c  block.h  pool.c  pool.h  str.c  str.h  str_type.c  str_type.h  type.h  unittest.c  unittest.h
src/printer/: CMakeLists.txt  opaque.h  printer.c  printer.h  type.h  typedef.h
src/scanner/: CMakeLists.txt  impl.h  lexer.l  opaque.h  parse.c  parse.h  parser.c  parser.h  parser.y  register.c  register.h  scanner.c  scanner.h  symbol.h  type.h  typedef.c  typedef.h  yyscan.c  yyscan.h  yyscan_t.c  yyscan_t.h
src/scanner/parser/: CMakeLists.txt  lexer.l  parser.h  parser.y  yyscan.c  yyscan.h
src/scanner/src/: .dir-locals.el  lexer.l  parser.y
src/set/: CMakeLists.txt  pool.c  set.c  set.h  sort.c  sort.h  symbol.c  symbol.h  type.h  unittest.c  unittest.h
src/sexp/: CMakeLists.txt  sexp.c  sexp.h
src/str/: CMakeLists.txt  str.c  str.h  type.h  unittest.c  unittest.h  view.c  view_type.c
src/util/: CMakeLists.txt  box.c  box.h  box_type.c  box_type.h  buffer.c  buffer.h  range.c  range.h  slice.c  slice.h  symbol.h  type.h  util.c  util.h
src/utility/: CMakeLists.txt  bool.h  buffer.c  buffer.h  opaque.h  stddef.h  type.h  types.h  utility.c  utility.h
src/vec/: CMakeLists.txt  array.c  array.h  ptr.c  ptr.h  ptr_type.c  ptr_type.h  type.h  unittest.c  unittest.h  vec.c  vec.h  vec_ptr.c  vec_ptr.h
src/vector/: CMakeLists.txt  buffer.c  buffer.h  pool.c  span.c  span.h  type.h  typedef.h  unittest.c  unittest.h  vec.c  vec.h  vec_ptr.c  vec_ptr.h  vector.c  vector.h
(+199 files in other folders)
